# binocular-range-finder

./: .gitattributes  .gitignore  README.md
01_Theory_and_Math/: asymmetric_calibration.md  epipolar_geometry.md  symmetric_stereo.md
02_Prototypes/camera_calibration/: README.md
02_Prototypes/depth_map_gen/: README.md
03_Core_Algorithms/: README.md
03_Core_Algorithms/include/: PupilDetector.h  StereoApi.h  StereoMatcher.h  Triangulate.h
03_Core_Algorithms/src/: pipeline.cpp  pupil_seg.cpp  rectify.cpp  triangulate.cpp
03_Core_Algorithms/src/directml_amd/: CMakeLists.txt  main.cpp
03_Core_Algorithms/src/onnxruntime_cpu/: CMakeLists.txt  main.cpp
03_Core_Algorithms/src/openvino_intel/: CMakeLists.txt  main.cpp
03_Core_Algorithms/src/rk3588_npu/: CMakeLists.txt  main.cpp
04_UI_Integration/: README.md
04_UI_Integration/Visualization_Components/: README.md
05_Datasets/: README.md
05_Datasets/raw_calibration_imgs/: readme.md
06_Config_Params/: README.md  extrinsics.yml  intrinsics.yml
